--- a/index.html
+++ b/index.html
@@ -674,6 +674,8 @@
             background-size: cover;
             background-position: center center;
             background-repeat: no-repeat;
+            image-rendering: -webkit-optimize-contrast;
+            image-rendering: crisp-edges;
         }
 
         .polaroid:hover {
@@ -1407,7 +1409,7 @@
 
                 // 4. 执行截图
                 html2canvas(paper, {
-                    scale: 2,
+                    scale: 3,
                     useCORS: true,
                     allowTaint: true,
                     backgroundColor: bgColor,
