--- a/index.html
+++ b/index.html
@@ -1477,8 +1477,14 @@
 
                 // 创建替身元素
                 const div = document.createElement('div');
-                div.textContent = text;
                 div.className = 'print-text-replacement'; // 应用基础打印样式
+                
+                // 对于textarea，使用innerHTML并将换行符转为<br>，确保换行正确显示
+                if (input.tagName === 'TEXTAREA') {
+                    div.innerHTML = text.replace(/\n/g, '<br>');
+                } else {
+                    div.textContent = text;
+                }
 
                 // 复制关键样式
                 div.style.width = rect.width + 'px'; // 强制同宽
